sg_import latency validation changed to longpoll

--- a/perfrunner/utils/syncgateway/configs/2.1/hebe_channel_xattr.config
+++ b/perfrunner/utils/syncgateway/configs/2.1/hebe_channel_xattr.config
@@ -5,11 +5,11 @@
   },
   "databases": {
     "db": {
-      "server": "http://172.23.100.190:8091",
+      "server": "http://172.23.109.177:8091",
       "bucket": "bucket-1",
       "username": "bucket-1",
       "password": "password",
-      "enable_shared_bucket_access": true,
+      "num_index_replicas": 0,
       "users": { "GUEST": { "disabled": true, "admin_channels": ["*"] }
                },
       "sync" : ` function (doc) { channel(doc.channels); } `
