--- a/perfrunner/utils/syncgateway/configs/2.1/hebe_channel_xattr_import_no.config
+++ b/perfrunner/utils/syncgateway/configs/2.1/hebe_channel_xattr_import_no.config
@@ -10,8 +10,12 @@
       "username": "bucket-1",
       "password": "password",
       "num_index_replicas": 0,
-      "users": { "GUEST": { "disabled": true, "admin_channels": ["*"] }
+      "users": { "guest": { "password": "guest", "admin_channels": ["*"] }
                },
+      "roles": {
+      "moderator": {},
+      "admin": {}
+      },
       "sync" : ` function (doc) { channel(doc.channels); } `
     }
   }
