--- a/perfrunner/utils/syncgateway/configs/2.1/hebe_channel_xattr_import.config
+++ b/perfrunner/utils/syncgateway/configs/2.1/hebe_channel_xattr_import.config
@@ -5,15 +5,19 @@
   },
   "databases": {
     "db": {
-      "server": "http://172.23.97.24:8091",
+      "server": "http://172.23.109.177:8091",
       "bucket": "bucket-1",
       "username": "bucket-1",
       "password": "password",
       "enable_shared_bucket_access": true,
       "import_docs": true,
       "num_index_replicas": 0,
-      "users": { "GUEST": { "disabled": true, "admin_channels": ["*"] }
+      "users": { "guest": { "password": "guest", "admin_channels": ["*"] }
                },
+      "roles": {
+      "moderator": {},
+      "admin": {}
+      },
       "sync" : ` function (doc) { channel(doc.channels); } `
     }
   }
